--- a/examples/streaming-service/layouts/base.liquid
+++ b/examples/streaming-service/layouts/base.liquid
@@ -8,6 +8,8 @@
     <script type="module" src="http://localhost:5173/src/index.js" defer></script>
   {% else %}
   <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/poster.css">
   <script type="module" src="/main.js" defer></script>
   <script type="nomodule" src="/polyfills-legacy.js" defer></script>
   <script type="nomodule" src="/main-legacy.js" defer></script>
