--- a/examples/streaming-service/src/index.css
+++ b/examples/streaming-service/src/index.css
@@ -2,8 +2,8 @@
 @import 'reset.css';
 @import "typography.css";
 
-@import '../components/poster/poster.css';
-@import "../views/detail.css";
+@import 'poster.css';
+@import "detail.css";
 
 body {
   background-color: #1a1a1a;
