Added logo and animation

--- a/examples/streaming-service/src/index.css
+++ b/examples/streaming-service/src/index.css
@@ -16,3 +16,17 @@ body {
   grid-gap: 1rem;
   padding: 1rem;
 }
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1em;
+  align-items: end;
+}
+
+.logo {
+  width: 6em;
+}
+
+
