--- a/examples/streaming-service/views/detail.liquid
+++ b/examples/streaming-service/views/detail.liquid
@@ -19,6 +19,10 @@
   <div class="backdrop-image__container">
     <img src="https://image.tmdb.org/t/p/w1280/{{ movie.backdrop_path }}" alt="" class="backdrop-image">
   </div>
+  <div>
+    <p><button class="button">Share MDN!</button></p>
+    <p class="result"></p> 
+  </div>
 </div>
 
 {% comment %}<img src="https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" alt="Movieposter for {{ mov }}">{% endcomment %}
