--- a/examples/streaming-service/layouts/base.liquid
+++ b/examples/streaming-service/layouts/base.liquid
@@ -13,20 +13,41 @@
   <script type="module" src="/main.js" defer></script>
   <script type="nomodule" src="/polyfills-legacy.js" defer></script>
   <script type="nomodule" src="/main-legacy.js" defer></script>
+  <script type="nomodule" src="/index.js" defer></script>
   {% endif %}
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <head>
+  <header>
+    <a href="/">
+      <img class="logo" src="/images/logo-no-background.png" alt="">
+    </a>
     <form action="/search" method="get">
       <label for="search">Search</label>
       <input id="search" type="search" name="term">
 
       <button type="submit">Search</button>
     </form>
-  </head>
+  </header>
   {% block content %}{% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Observer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Draggable.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/MotionPathPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/EaselPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/PixiPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+
+
+<!-- RoughEase, ExpoScaleEase and SlowMo are all included in the EasePack file -->    
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/EasePack.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/CustomEase.min.js"></script>
 </body>
 </html>
