--- a/examples/streaming-service/views/trailers.liquid
+++ b/examples/streaming-service/views/trailers.liquid
@@ -1,14 +1,6 @@
 {% layout "layouts/base.liquid" %}
 
-{% block content %}
-<ul class="grid-trailers">
-  {% for key in movieTrailers %}
-    <li>
-      {% render 'components/poster/trailer.liquid', key: key %}
-    </li>
-  {% endfor %}
-</ul>
-
+{% block trailers %}
 <ul class="grid">
   {% for movie in movieData.results %}
     {% if movie.original_title %}
@@ -25,6 +17,4 @@
     </li>
   {% endfor %}
 </ul>
-
-
 {% endblock %}
