--- a/examples/streaming-service/views/detail.css
+++ b/examples/streaming-service/views/detail.css
@@ -5,32 +5,34 @@
 }
 
 .backdrop-image__container {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  top: 0;
+  bottom: 0;
   left: 0;
-  opacity: .75;
+  opacity: .45;
   z-index: -1;
 }
 
-.backdrop-image__container:after {
+.backdrop-image__container:before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(26, 26, 26, 0), #1a1a1a);
-  /*background: linear-gradient(180deg, rgba(var(--background-color-rgb), 0), rgba(var(--background-color-rgb), 1));*/
+  background: linear-gradient(0deg, rgba(26, 26, 26, 0), #1a1a1a);
+  /* background: linear-gradient(180deg, rgba(var(--background-color-rgb), 0), rgba(var(--background-color-rgb), 1)); */
 }
 
 .movie__info {
   display: flex;
-  max-width: 900px;
-  flex-direction: column;
-  align-items: flex-end;
-  padding: 20px;
-  margin-top: 80px;
+    flex-direction: row;
+    margin-top: 80px;
+    max-width: 800px;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 2em;
 }
 
 .movie__info-image {
