--- a/examples/streaming-service/views/index.liquid
+++ b/examples/streaming-service/views/index.liquid
@@ -1,7 +1,9 @@
 {% layout "layouts/base.liquid" %}
 
 {% block content %}
-<ul class="grid-trailers">
+<h1>Trending trailers</h1>
+<section class="grid-trailers">
+<ul class="scroll-trailers">
   {% for key in movieTrailers %}
     <li>
       {% render 'components/poster/trailer.liquid', key: key %}
@@ -9,22 +11,28 @@
   {% endfor %}
 </ul>
 
-<ul class="grid">
-  {% for movie in movieData.results %}
-    {% if movie.original_title %}
-      {% assign mov = movie.original_title %}
-    {% else %}
-      {% assign mov = movie.name %}
-    {% endif %}
-    <li>
-      <a href="/movie/{{ movie.id }}">
-        {% render 'components/poster/poster.liquid', movie: movie %}
-        {% comment %}<pre>{{ movie | json }}</pre>{% endcomment %}
-        {% comment %}<img src="https://image.tmdb.org/t/p/w500/{{ movie.backdrop_path }}" alt="">{% endcomment %}
-      </a>
-    </li>
-  {% endfor %}
-</ul>
+</section>
+
+<section class="theater">
+  <h2>Now playing in the theater</h2>
+  <ul class="scroll">
+    {% for movie in nowPlaying.results %}
+      {% if movie.original_title %}
+        {% assign mov = movie.original_title %}
+      {% else %}
+        {% assign mov = movie.name %}
+      {% endif %}
+      <li>
+        <a href="/movie/{{ movie.id }}">
+          {% render 'components/poster/poster.liquid', movie: movie %}
+          {% comment %}<pre>{{ movie | json }}</pre>{% endcomment %}
+          {% comment %}<img src="https://image.tmdb.org/t/p/w500/{{ movie.backdrop_path }}" alt="">{% endcomment %}
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
+</section>
+
 
 
 {% endblock %}
