--- a/examples/streaming-service/components/poster/poster.css
+++ b/examples/streaming-service/components/poster/poster.css
@@ -1,21 +1,25 @@
 .poster {
   position: relative;
-  img {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+}
+
+.poster img {
+  width: 100%;
+  margin-bottom: 10px;
+  min-height: 300px;
 }
 
 .poster__title {
   color: white;
   font-size: 1rem;
   margin-bottom: 10px;
-
+  font-family: "Montserrat", sans-serif;
+  font-size: 1em;
+  line-height: 1.2em;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(255 144 139 / 50%);
   padding: 10px;
   text-align: center;
 }
