--- a/examples/streaming-service/layouts/base.liquid
+++ b/examples/streaming-service/layouts/base.liquid
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   {% block head %}
-    <title>My First Page</title>
+    <title>Red Tower Films</title>
   {% endblock %}
   {% if NODE_ENV == "development" %}
     <script type="module" src="http://localhost:5173/@vite/client" defer></script>
