--- a/examples/streaming-service/src/index.css
+++ b/examples/streaming-service/src/index.css
@@ -148,6 +148,17 @@ form input {
   right: 1em;
 }
 
+.button {
+  background: var(--rose);
+  border: none;
+  padding: .4em 1em;
+  border-radius: 20px;
+  font-size: 1em;
+  margin-top: 1em;
+  color: var(--white);
+  cursor: pointer;
+}
+
 input:-internal-autofill-selected {
   background-color: var(--white);
 }
@@ -173,3 +184,31 @@ input:-internal-autofill-selected {
 ::-webkit-scrollbar-thumb:hover {
   background: #b30000; 
 }
+
+
+.poster {
+  position: relative;
+}
+
+.poster img {
+  width: 100%;
+  margin-bottom: 10px;
+  min-height: 300px;
+}
+
+.poster__title {
+  color: white;
+  font-size: 1rem;
+  margin-bottom: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1em;
+  line-height: 1.2em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgb(255 144 139 / 50%);
+  padding: 10px;
+  text-align: center;
+}
+
