--- a/examples/streaming-service/views/detail.liquid
+++ b/examples/streaming-service/views/detail.liquid
@@ -21,7 +21,7 @@
   <div class="movie__info">
     <img src="https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" alt="Movieposter for {{ mov }}" class="movie__info-image">
     <section>
-      <h1 class="h1">{{ mov }}</h1>
+      <h1>{{ mov }}</h1>
       <p class="movie__info-description">{{ movie.overview }}</p>
       <p>Release date: {{ movie.release_date }}</p>
       <p>Rating: {{ movie.vote_average }}</p>
